Remove legacy support for maintenance