@@ -28,9 +28,9 @@ import org.atmosphere.util.Utils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import javax.xml.bind.DatatypeConverter;
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.Base64;
 import java.util.HashSet;
 
 import static org.atmosphere.cpr.ApplicationConfig.EXCLUDED_CONTENT_TYPES;
@@ -105,7 +105,7 @@ public class TrackMessageSizeB64Interceptor extends AtmosphereInterceptorAdapter
                     && (response.getContentType() == null
                     || !excludedContentTypes.contains(response.getContentType().toLowerCase()))) {
                 response.setCharacterEncoding(OUT_ENCODING);
-                String s = DatatypeConverter.printBase64Binary(responseDraft);
+                String s = Base64.getEncoder().encodeToString(responseDraft);
                 StringBuilder sb = new StringBuilder();
                 sb.append(s.length()).append(DELIMITER).append(s);
                 return sb.toString().getBytes(OUT_ENCODING);
